Update example diff and html
This commit shows the result of the diff mapper by exporting the
new diff to the .diff file, then using a diff2html converter to
transfer it to html for an easier viewing experience. Looking at
the .html, you can see the following properties are met to reduce
the number of potential conflicts:
- Only additions, no deletions
- No code on the same line as the instance is modified

Issue: #1

--- a/JavaWorkspace/diffMapper/resources/xxs_diff.html
+++ b/JavaWorkspace/diffMapper/resources/xxs_diff.html
@@ -39,7 +39,7 @@
 <div id="diff">
   <div class="d2h-file-list-wrapper">
     <div class="d2h-file-list-header">
-        <span class="d2h-file-list-title">Files changed (23)</span>
+        <span class="d2h-file-list-title">Files changed (22)</span>
         <a class="d2h-file-switch d2h-hide">hide</a>
         <a class="d2h-file-switch d2h-show">show</a>
     </div>
@@ -311,19 +311,6 @@
     <path d="M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z"></path>
 </svg></span>
       <a href="#d2h-376245" class="d2h-file-name">drivers/staging/lustre/lustre/llite/dir.c</a>
-      <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+1</span>
-          <span class="d2h-lines-deleted">-0</span>
-      </span>
-    </span>
-</li>
-<li class="d2h-file-list-line">
-    <span class="d2h-file-name-wrapper">
-      <span><svg aria-hidden="true" class="d2h-icon d2h-changed" height="16" title="modified" version="1.1"
-     viewBox="0 0 14 16" width="14">
-    <path d="M13 1H1C0.45 1 0 1.45 0 2v12c0 0.55 0.45 1 1 1h12c0.55 0 1-0.45 1-1V2c0-0.55-0.45-1-1-1z m0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z"></path>
-</svg></span>
-      <a href="#d2h-374604" class="d2h-file-name">drivers/staging/lustre/lustre/obdclass/local_storage.c</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+1</span>
           <span class="d2h-lines-deleted">-0</span>
@@ -988,7 +975,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line d2h-ins">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            if (&#x2F;* 1ab60aa@@@DEADLOCK@@@16145@@@41@@@drivers&#x2F;media&#x2F;rc&#x2F;lirc_dev.c@@@irctl_lock *&#x2F;</span>
+            <span class="d2h-code-line-ctn">                &#x2F;* 1ab60aa@@@DEADLOCK@@@16145@@@41@@@drivers&#x2F;media&#x2F;rc&#x2F;lirc_dev.c@@@irctl_lock *&#x2F;</span>
         </div>
     </td>
 </tr><tr>
@@ -4172,7 +4159,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line d2h-ins">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if (&#x2F;* 15b3b8f@@@DEADLOCK@@@6731@@@38@@@drivers&#x2F;message&#x2F;fusion&#x2F;mptctl.c@@@mutex *&#x2F;</span>
+            <span class="d2h-code-line-ctn">            &#x2F;* 15b3b8f@@@DEADLOCK@@@6731@@@38@@@drivers&#x2F;message&#x2F;fusion&#x2F;mptctl.c@@@mutex *&#x2F;</span>
         </div>
     </td>
 </tr><tr>
@@ -4216,7 +4203,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line d2h-ins">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if (&#x2F;* 1f93823@@@DEADLOCK@@@6804@@@48@@@drivers&#x2F;message&#x2F;fusion&#x2F;mptctl.c@@@mutex *&#x2F;</span>
+            <span class="d2h-code-line-ctn">            &#x2F;* 1f93823@@@DEADLOCK@@@6804@@@48@@@drivers&#x2F;message&#x2F;fusion&#x2F;mptctl.c@@@mutex *&#x2F;</span>
         </div>
     </td>
 </tr><tr>
@@ -4618,7 +4605,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-line d2h-ins">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if (&#x2F;* 123615a@@@DEADLOCK@@@11902@@@37@@@drivers&#x2F;platform&#x2F;goldfish&#x2F;goldfish_pipe.c@@@lock *&#x2F;</span>
+            <span class="d2h-code-line-ctn">            &#x2F;* 123615a@@@DEADLOCK@@@11902@@@37@@@drivers&#x2F;platform&#x2F;goldfish&#x2F;goldfish_pipe.c@@@lock *&#x2F;</span>
         </div>
     </td>
 </tr><tr>
@@ -5331,106 +5318,6 @@
         <div class="d2h-code-line d2h-cntx">
             <span class="d2h-code-line-prefix"> </span>
             <span class="d2h-code-line-ctn">    if (IS_ERR(page)) {</span>
-        </div>
-    </td>
-</tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-<div id="d2h-374604" class="d2h-file-wrapper" data-lang="c">
-    <div class="d2h-file-header">
-    <span class="d2h-file-name-wrapper">
-    <span class="d2h-icon-wrapper"><svg aria-hidden="true" class="d2h-icon" height="16" version="1.1" viewBox="0 0 12 16" width="12">
-    <path d="M6 5H2v-1h4v1zM2 8h7v-1H2v1z m0 2h7v-1H2v1z m0 2h7v-1H2v1z m10-7.5v9.5c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h7.5l3.5 3.5z m-1 0.5L8 2H1v12h10V5z"></path>
-</svg></span>
-    <span class="d2h-file-name">drivers/staging/lustre/lustre/obdclass/local_storage.c</span>
-    <span class="d2h-tag d2h-changed d2h-changed-tag">CHANGED</span></span>
-    </div>
-    <div class="d2h-file-diff">
-        <div class="d2h-code-wrapper">
-            <table class="d2h-diff-table">
-                <tbody class="d2h-diff-tbody">
-                <tr>
-    <td class="d2h-code-linenumber d2h-info"></td>
-    <td class="d2h-info">
-        <div class="d2h-code-line d2h-info">@@ -755,6 +755,7 @@ int local_oid_storage_init(const struct lu_env *env, struct dt_device *dev,</div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">755</div>
-<div class="line-num2">755</div>
-    </td>
-    <td class="d2h-cntx">
-        <div class="d2h-code-line d2h-cntx">
-            <span class="d2h-code-line-prefix"> </span>
-            <span class="d2h-code-line-ctn">    if (IS_ERR(ls))</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">756</div>
-<div class="line-num2">756</div>
-    </td>
-    <td class="d2h-cntx">
-        <div class="d2h-code-line d2h-cntx">
-            <span class="d2h-code-line-prefix"> </span>
-            <span class="d2h-code-line-ctn">        return PTR_ERR(ls);</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">757</div>
-<div class="line-num2">757</div>
-    </td>
-    <td class="d2h-cntx">
-        <div class="d2h-code-line d2h-cntx">
-            <span class="d2h-code-line-prefix"> </span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-ins">
-      <div class="line-num1"></div>
-<div class="line-num2">758</div>
-    </td>
-    <td class="d2h-ins">
-        <div class="d2h-code-line d2h-ins">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    &#x2F;* 12b61f@@@DEADLOCK@@@19396@@@30@@@drivers&#x2F;staging&#x2F;lustre&#x2F;lustre&#x2F;obdclass&#x2F;local_storage.c@@@ls_los_mutex *&#x2F;</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">758</div>
-<div class="line-num2">759</div>
-    </td>
-    <td class="d2h-cntx">
-        <div class="d2h-code-line d2h-cntx">
-            <span class="d2h-code-line-prefix"> </span>
-            <span class="d2h-code-line-ctn">    mutex_lock(&amp;ls-&gt;ls_los_mutex);</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">759</div>
-<div class="line-num2">760</div>
-    </td>
-    <td class="d2h-cntx">
-        <div class="d2h-code-line d2h-cntx">
-            <span class="d2h-code-line-prefix"> </span>
-            <span class="d2h-code-line-ctn">    *los = dt_los_find(ls, fid_seq(first_fid));</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-linenumber d2h-cntx">
-      <div class="line-num1">760</div>
-<div class="line-num2">761</div>
-    </td>
-    <td class="d2h-cntx">
-        <div class="d2h-code-line d2h-cntx">
-            <span class="d2h-code-line-prefix"> </span>
-            <span class="d2h-code-line-ctn">    if (*los != NULL)</span>
         </div>
     </td>
 </tr>
